--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -6,4 +6,47 @@
     <welcome-file-list>
         <welcome-file>index.html</welcome-file>
     </welcome-file-list>
+
+    <servlet>
+        <servlet-name>QuickStartServlet</servlet-name>
+        <servlet-class>servlet.QuickStartServlet</servlet-class>
+
+        <init-param>
+            <param-name>driver</param-name>
+            <param-value>com.mysql.jdbc.Driver</param-value>
+        </init-param>
+
+        <load-on-startup>3</load-on-startup>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>QuickStartServlet</servlet-name>
+        <url-pattern>/quickStartServlet</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>QuickStartServlet2</servlet-name>
+        <servlet-class>servlet.QuickStartServlet2</servlet-class>
+
+
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>QuickStartServlet2</servlet-name>
+        <!--<url-pattern>/quickStartServlet2</url-pattern>-->
+       <!-- <url-pattern>/aaa/bbb/*</url-pattern>-->
+       <!-- <url-pattern>*.abc</url-pattern>-->
+        <!--<url-pattern>/aaa/bbb/*.adc</url-pattern>-->
+
+        <url-pattern>/aaa/vvv/*</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>LoginServlet</servlet-name>
+        <servlet-class>servlet.LoginServlet</servlet-class>
+
+
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>LoginServlet</servlet-name>
+        <url-pattern>/loginServlet</url-pattern>
+    </servlet-mapping>
 </web-app>
